# nixl

./: .gitlab-ci.yml  ATTRIBUTIONS.md  Dockerfile  README.md  meson.build  meson_options.txt
example/: nixl_example.cpp
include/: nixl.h  nixl_descriptors.h  nixl_metadata.h  nixl_params.h  nixl_types.h
include/backend/: backend_aux.h  backend_engine.h  backend_tester.h
include/internal/: agent_data.h  backend_engine.h  mem_section.h  metadata_handler.h  metadata_stream.h  transfer_backend.h  transfer_request.h
python/: nixl_bindings_test.py
src/: meson.build  nixl_agent.cpp  nixl_descriptors.cpp  nixl_memory_section.cpp  nixl_metadata_stream.cpp
src/adapter/: README.md  meson.build  nixl_adapter.cpp  nixl_adapter.h
src/nixl_nw_backends/: meson.build  ucx_backend.cpp  ucx_backend.h  ucx_mo_backend.cpp  ucx_mo_backend.h
src/nixl_storage_backends/: meson.build
src/nixl_storage_backends/gds/: gds_backend.cpp  gds_backend.h  gds_utils.cpp  gds_utils.h  meson.build
src/plugins/: meson.build
src/plugins/ucx/: ucx_backend.cpp  ucx_backend.h
src/plugins/ucx_mo/: meson.build  ucx_mo_backend.cpp  ucx_mo_backend.h  ucx_mo_plugin.cpp
src/pybind/: meson.build  nixl_bindings.cpp  nixl_utils.cpp
src/utils/: README.md  meson.build
src/utils/data_structures/: list.h  list_elem.h
src/utils/serdes/: meson.build  serdes.cpp  serdes.h  serdes_test.cpp
src/utils/sys/: nixl_time.h
src/utils/ucx/: meson.build  ucx_am_test.cpp  ucx_utils.cpp  ucx_utils.h  ucx_worker_test.cpp
test/: README.md  agent_example.cpp  desc_example.cpp  gds_backend_test.cpp  meson.build  metadata_streamer.cpp  nixl_test.cpp  p2p_socket_test.cpp  ucx_backend_example.cpp  ucx_backend_multi.cpp  ucx_backend_test.cpp  ucx_mo_backend_test.cpp
test/python/: blocking_send_recv_example.py  desc_perf_test.py  nixl_bindings_test.py  nixl_wrapper.py  nixl_wrapper_test.py
test/unit/plugins/ucx/: meson.build  ucx_backend_test.cpp
test/unit/plugins/ucx_mo/: meson.build  ucx_mo_backend_test.cpp
